Updating contact.html
Rec logo name and size fixed .

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><img src="images/rlogo.svg"></div>
+							<div id="colorlib-logo"><img src="images/logo.svg" height="69" width="102"></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
