--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
 							<li><a href="tel://1234567920"><i class="icon-phone"></i>
 								04132654838</a></li>
 							<li><a href="recursion.PondicherryUniversity@gmail.com"><i class="icon-envelope"></i> recursion.PondicherryUniversity@gmail.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i> www.Recursion.com</a></li>
+							<li><a href="#"><i class="icon-location4"></i>Coming Soon...</a></li>
 						</ul>
 					</div>
 				</div>
