Added Expenditure image

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<div class="item">
 							<div class="col-md-8 col-md-offset-2">
 								<div class="featured-entry">
-									<img class="img-responsive" src="images/dashboard_full_3.jpg" alt="">
+									<img class="img-responsive" src="images/dashboard_full_3.png" alt="">
 								</div>
 							</div>
 						</div>
