--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
+	<!-- favicon -->
+	<link rel="shortcut icon" href="images/logo.svg">
 
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
