--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
 										@gmail.com</a></p>
 									</div>
 									<div class="con-info">
-										<p><span><i class="icon-globe"></i></span> <a href="#">https://wwwRecursion.com</a></p>
+										<p><span><i class="icon-globe"></i></span>coming soon...</a></p>
 									</div>
 								</div>
 							</div>
@@ -225,7 +225,7 @@
 							<li><a href="tel://1234567920"><i class="icon-phone"></i>
 								04132654838</a></li>
 							<li><a href="recursion.PondicherryUniversity@gmail.com"><i class="icon-envelope"></i> recursion.PondicherryUniversity@gmail.com</a></li>
-							<li><a href="#"><i class="icon-location4"></i>Coming Soon...</a></li>
+							<li><a href="#"><i class="icon-location4"></i>Pondicherry University</a></li>
 						</ul>
 					</div>
 				</div>
